@@ -4,7 +4,6 @@ using TauCode.Mq.Abstractions;
 
 namespace TauCode.Mq.Testing.Tests
 {
-    // todo: don't need it, indeed. log is enough.
     public class MessageRepository
     {
         public static MessageRepository Instance = new MessageRepository();
